--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -247,6 +247,14 @@ footer {
   }
 }
 
+// TODO: use svg instead:
+.div-line {
+  width:          100%;
+  height:         0;
+  border-top:     1px #dddddd solid;
+  border-bottom:  1px white solid;
+}
+
 /*******************
  Media queries
  *******************/
