--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -578,6 +578,13 @@ footer i {
   fill: red;
 }
 
+.div-line {
+  width: 100%;
+  height: 0;
+  border-top: 1px #dddddd solid;
+  border-bottom: 1px white solid;
+}
+
 /*******************
  Media queries
  *******************/
