--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -415,31 +415,6 @@ section {
 }
 
 /*******************
- Header
- *******************/
-header {
-  position: fixed;
-  width: 100%;
-  height: 4.5rem;
-  background: white;
-  border-bottom: 1px solid darkgray;
-}
-header nav {
-  height: 100%;
-}
-header button {
-  margin: 0 0.7rem;
-}
-header img {
-  max-height: 4rem;
-  width: auto;
-  -moz-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  -webkit-transition: all 0.5s ease;
-  transition: all 0.5s ease;
-}
-
-/*******************
  Home
  *******************/
 #home {
@@ -449,10 +424,7 @@ header img {
   background-image: -webkit-radial-gradient(#ffffff 49%, #cfdce4 100%);
   background-image: radial-gradient(#ffffff 49%, #cfdce4 100%);
   order: 1;
-}
-
-.typography {
-  background: url("../../public/img/bg_texture_2.png") no-repeat center;
+  overflow: hidden;
 }
 
 /*******************
