refactor: Change home to svg image.

--- a/src/sass/_resets.scss
+++ b/src/sass/_resets.scss
@@ -14,3 +14,16 @@ html {
 *, *::before, *::after {
   box-sizing: inherit;
 }
+
+img {
+  /* image automatically resizes to max-width of the boundary: */
+  max-width:  100%;
+  height:     auto;
+
+  // removes the extra space on bottom of a div that contains an image:
+  display:    block;
+}
+
+ul {
+  list-style: none;
+}
