--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -27,20 +27,6 @@ $common-transition: all 0.5s ease;
 /* ==========================================================================
    Styles
    ========================================================================== */
-img {
-  /* image automatically resizes to max-width of the boundary: */
-  max-width:  100%;
-  height:     auto;
-
-  // removes the extra space on bottom of a div that contains an image:
-  display:    block;
-}
-
-
-
-ul {
-  list-style: none;
-}
 
 a {
   color: $link-blue; }
@@ -93,11 +79,9 @@ section {
  Home
  *******************/
 #home {
-  @include background-image(radial_gradient(#ffffff 49%, #cfdce4 100%));
   order:    1;
   overflow: hidden;
 }
-
 
 /*******************
  Portfolio
@@ -198,10 +182,9 @@ footer {
   }
 }
 
-/*******************
- Misc
- *******************/
-
+/* ==========================================================================
+   Misc
+   ========================================================================== */
 /* creates an svg triangle that overlays on page (i.e. negative margin) */
 .triangle-center {
   // change triangle variables as necessary:
