refactor: Create About section.

--- a/src/sass/_flexgrid.scss
+++ b/src/sass/_flexgrid.scss
@@ -32,7 +32,7 @@
 }
 
 /* columns: */
-[class ^= 'col-'] {
+[class ^= 'col-'], .column {
   @include flex(0 0 auto);  // shorthand for flex-grow, flex-shrink, flex-basis
   @include box-sizing(border-box);
   @include flex-grow(1);
