--- a/src/sass/_utility.scss
+++ b/src/sass/_utility.scss
@@ -14,7 +14,7 @@
   min-height: 100%;
 }
 
-.responsive, .margin-center {
+.auto-margin, .margin-center {
   margin-left:  auto;
   margin-right: auto;
 }
