--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -19,7 +19,7 @@ $gray:          rgb(100, 100, 100);
 $text-black:    #222;
 
 $margin-tiles:      0.9%;
-$header-height:     4.5rem;
+$header-height:     5rem;
 $common-transition: all 0.5s ease;
 /* ========================================================================== */
 
@@ -35,9 +35,10 @@ a:hover {
 
 /* Buttons: */
 button, .button, input[type='button'], input[type='submit'], input[type='reset'] {
+  font-size:        1.1rem;
   background-color: transparent;
   display:          inline-block;
-  padding:          0.4rem 2.4rem;
+  padding:          0.4rem 0.7rem;
   cursor:           pointer;
   border-radius:    4px;
   border:           1px solid rgba(35, 35, 35, 0);
@@ -72,27 +73,54 @@ section {
 }
 
 .title {
-  padding: 9.2rem 0 5rem 0;
+  padding: 10.2rem 0 7rem 0;
   @include flex-wrap(wrap);
   @include align-items(center);
 }
 
+/*******************
+ Header
+ *******************/
+header {
+  // position:       fixed;
+  width:          100%;
+  height:         $header-height;
+  background:     white;
+  text-transform: uppercase;
+  border-bottom:  1px solid darkgray;
+
+  nav {
+    height: 100%;
+  }
+
+  button {
+    margin: 0;
+    color: $gray;
+  }
+
+  img {
+    max-height: 4rem;
+    width:      auto;
+    @include    transition($common-transition);
+  }
+}
 /*******************
  Home
  *******************/
 #home {
   order:    1;
   overflow: hidden;
+  height:   100%;
 }
 
 /*******************
  About
  *******************/
 .about-hr {
-  width:      70%;
-  height:     2px;
-  background: #e5ded6;    // needed when hr has height > 1px
-  color:      #e5ded6;
+  width:      100%;
+  height:     1px;
+  background: #e4dcd2;    // needed when hr has height > 1px
+  color:      #e4dcd2;
   border:     none;
 }
 
