--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -373,9 +373,10 @@ a:hover {
 
 /* Buttons: */
 button, .button, input[type='button'], input[type='submit'], input[type='reset'] {
+  font-size: 1.1rem;
   background-color: transparent;
   display: inline-block;
-  padding: 0.4rem 2.4rem;
+  padding: 0.4rem 0.7rem;
   cursor: pointer;
   border-radius: 4px;
   border: 1px solid rgba(35, 35, 35, 0);
@@ -409,11 +410,37 @@ section {
 }
 
 .title {
-  padding: 9.2rem 0 5rem 0;
+  padding: 10.2rem 0 7rem 0;
   -webkit-flex-wrap: wrap;
   flex-wrap: wrap;
   -webkit-align-items: center;
   align-items: center;
+}
+
+/*******************
+ Header
+ *******************/
+header {
+  width: 100%;
+  height: 5rem;
+  background: white;
+  text-transform: uppercase;
+  border-bottom: 1px solid darkgray;
+}
+header nav {
+  height: 100%;
+}
+header button {
+  margin: 0;
+  color: #646464;
+}
+header img {
+  max-height: 4rem;
+  width: auto;
+  -moz-transition: all 0.5s ease;
+  -o-transition: all 0.5s ease;
+  -webkit-transition: all 0.5s ease;
+  transition: all 0.5s ease;
 }
 
 /*******************
@@ -422,16 +449,17 @@ section {
 #home {
   order: 1;
   overflow: hidden;
+  height: 100%;
 }
 
 /*******************
  About
  *******************/
 .about-hr {
-  width: 70%;
-  height: 2px;
-  background: #e5ded6;
-  color: #e5ded6;
+  width: 100%;
+  height: 1px;
+  background: #e4dcd2;
+  color: #e4dcd2;
   border: none;
 }
 
