--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -1,6 +1,6 @@
-/*
-  Author: Dee Reddy (deesus@yandex.com)
-  */
+/* ==========================================================================
+    Author: Dee Reddy (deesus@yandex.com)
+   ========================================================================== */
 /**************
  Resets
  **************/
@@ -338,7 +338,7 @@ h6 {
 }
 
 .full-height {
-  min-height: 100%;
+  height: 100%;
 }
 
 .auto-margin, .margin-center {
@@ -406,7 +406,7 @@ button:hover, button:focus, .button:hover, .button:focus, input[type='button']:h
    ========================================================================== */
 /* all sections (except footer, header): */
 section {
-  min-height: 100vh;
+  min-height: 25vh;
 }
 
 .title {
@@ -449,7 +449,7 @@ header img {
 #home {
   order: 1;
   overflow: hidden;
-  height: 100%;
+  height: calc(80vh - 5rem);
 }
 
 /*******************
@@ -586,7 +586,7 @@ footer i {
 }
 .triangle-center svg {
   width: 50px;
-  height: 26 26px;
+  height: 26px;
   fill: red;
 }
 
