--- a/src/sass/_resets.scss
+++ b/src/sass/_resets.scss
@@ -15,7 +15,7 @@ html {
   box-sizing: inherit;
 }
 
-img {
+img, figure {
   /* image automatically resizes to max-width of the boundary: */
   max-width:  100%;
   height:     auto;
