refactor: Finalize first 3 sections. Point portfolio links to imgs.

--- a/src/sass/_fonts.scss
+++ b/src/sass/_fonts.scss
@@ -19,3 +19,9 @@
   font-weight:  600;
   src:          url('../assets/OpenSans-Bold.ttf');
 }
+
+@font-face {
+  font-family:  'Oldenburg';
+  font-style:   normal;
+  src:          url('../assets/Oldenburg-Regular.ttf');
+}
