--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -24,6 +24,8 @@ $text-black:    rgba(34, 34, 34, 1);    // same as #222
 $txt-blk-invis: rgba(34, 34, 34, 0);
 $sepia:         #e4dcd2;
 $light-sepia:   #fcfaf7;
+$brown:         #998e82;
+$brown-text:    #665f57;
 
 $margin-tiles:      0.9%;
 $header-height:     5rem;
@@ -47,14 +49,13 @@ button, .button, input[type='button'], input[type='submit'], input[type='reset']
   display:          inline-block;
   padding:          0.4rem 0.7rem;
   cursor:           pointer;
-  border-radius:    4px;
-  border:           1px solid rgba(35, 35, 35, 0);
+  border-radius:    20px;
+  border:           1px solid $txt-blk-invis;
+  letter-spacing:   0.1rem;
   @include          transition($common-transition);
 
-  // TODO: set `line-height` and `letter-spacing`
-
   &:hover, &:focus {
-    border:         1px solid rgba(35, 35, 35, 1);
+    border:         1px solid $text-black;
     color:          black;
   }
 }
@@ -93,8 +94,17 @@ header {
   width:          100%;
   height:         $header-height;
   background:     white;
-  text-transform: uppercase;
   border-bottom:  1px solid darkgray;
+
+  .logo {
+    font-family:  'Oldenburg', serif;
+    color:        $brown-text;
+    font-size:    2rem;
+  }
+
+  a {
+    text-transform: uppercase;
+  }
 
   nav {
     height: 100%;
@@ -102,7 +112,7 @@ header {
 
   button {
     margin: 0;
-    color: $gray;
+    color:  $gray;
   }
 
   img {
@@ -117,16 +127,12 @@ header {
 #home {
   order:      1;
   overflow:   hidden;
-  height:     calc(80vh - #{$header-height});
+  height:     calc(100vh - #{$header-height} - 1px);    // compensate for `header` and `hr`
 }
 
 /*******************
  About
  *******************/
-
-#about {
-
-}
 
 .about-hr {
   width:      100%;
@@ -170,28 +176,28 @@ header {
  *******************/
 #portfolio {
   background: rgba(250, 250, 250, 1);
-  @include box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
+  @include    box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
 }
 
 /* a container (or row) for portfolio bricks: */
 .portfolio-row {
-  @include display-flex;
-  @include flexbox((box-orient: horizontal));
-  @include justify-content(center);             // we want items to be centered
-  margin-bottom: $margin-tiles * 2;
+  @include        display-flex;
+  @include        flexbox((box-orient: horizontal));
+  @include        justify-content(center);             // we want items to be centered
+  margin-bottom:  $margin-tiles * 2;
 
   // N.b. the anchor acts as container:
   a {
-    margin: $margin-tiles;
+    margin:     $margin-tiles;
     /* resize tile upon resizing window: */
     // we want a max of three tiles in a row -- therefore, "100%/3" (3 divs add up to 100% width of window):
     // we also need to compensate for margins (1.2rem) on both sides -- therefore "2 * 1.2 rem":
-    max-width: calc(100%/3 - (2 * 1.2rem));
+    max-width:  calc(100%/3 - (2 * 1.2rem));
   }
 
   figure {
-    @include box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.2));
-    @include transition(all 0.4s ease 0s);
+    @include        box-shadow(0 1px 3px 0 rgba(0, 0, 0, 0.2));
+    @include        transition(all 0.4s ease 0s);
     padding:        1rem;
     border-radius:  4px;
     background:     white;
@@ -234,8 +240,8 @@ header {
  **************/
 /* for sticky footer, wrap everything but the footer in this selector: */
 body {
-  @include display-flex;
-  @include flex-direction(column);
+  @include            display-flex;
+  @include            flex-direction(column);
   -webkit-box-orient: vertical;
   min-height:         100vh;
 }
@@ -245,7 +251,7 @@ body {
 }
 
 footer {
-  @include box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
+  @include    box-shadow(inset 0 2px 4px 0 rgba(210, 210, 210, .5));
   min-height: 8.5rem;
   background: $footer-bg;
   color:      darkgray;
@@ -255,8 +261,8 @@ footer {
   }
 
   a, a i {
-    @include transition(color 0.4s ease);
-    color: darkgray;
+    @include  transition(color 0.4s ease);
+    color:    darkgray;
     &:hover {
       color:        $gray;
       border-color: $gray;
