--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -236,6 +236,11 @@ ul {
   font-weight: 600;
   src: url("../assets/OpenSans-Bold.ttf");
 }
+@font-face {
+  font-family: 'Oldenburg';
+  font-style: normal;
+  src: url("../assets/Oldenburg-Regular.ttf");
+}
 /**************
  Typography:
  **************/
@@ -377,15 +382,16 @@ button, .button, input[type='button'], input[type='submit'], input[type='reset']
   display: inline-block;
   padding: 0.4rem 0.7rem;
   cursor: pointer;
-  border-radius: 4px;
-  border: 1px solid rgba(35, 35, 35, 0);
+  border-radius: 20px;
+  border: 1px solid rgba(34, 34, 34, 0);
+  letter-spacing: 0.1rem;
   -moz-transition: all 0.5s ease;
   -o-transition: all 0.5s ease;
   -webkit-transition: all 0.5s ease;
   transition: all 0.5s ease;
 }
 button:hover, button:focus, .button:hover, .button:focus, input[type='button']:hover, input[type='button']:focus, input[type='submit']:hover, input[type='submit']:focus, input[type='reset']:hover, input[type='reset']:focus {
-  border: 1px solid #232323;
+  border: 1px solid #222222;
   color: black;
 }
 
@@ -423,8 +429,15 @@ header {
   width: 100%;
   height: 5rem;
   background: white;
-  text-transform: uppercase;
   border-bottom: 1px solid darkgray;
+}
+header .logo {
+  font-family: 'Oldenburg', serif;
+  color: #665f57;
+  font-size: 2rem;
+}
+header a {
+  text-transform: uppercase;
 }
 header nav {
   height: 100%;
@@ -448,7 +461,7 @@ header img {
 #home {
   order: 1;
   overflow: hidden;
-  height: calc(80vh - 5rem);
+  height: calc(100vh - 5rem - 1px);
 }
 
 /*******************
