feat: Add flex item properties.

--- a/src/sass/_flexgrid.scss
+++ b/src/sass/_flexgrid.scss
@@ -49,11 +49,23 @@
 }
 
 /**************
- Align Flex Items (i.e. flex utilities):
+ Flex Container properties:
  **************/
-/* main axis: */
-// N.b.: since 'justify' only exists as `justify-content` we shorten selector to 'justify'
-.justify {
+/* creates flexbox container horizontal direction */
+.flex-row {
+  @include display-flex;
+  @include flex-direction(row);
+}
+
+/* creates flexbox container vertical direction */
+.flex-column {
+  @include display-flex;
+  @include flex-direction(column);
+}
+
+/* main axis properties: */
+// N.b.: we can use full `justify-content` name or the `justify` shorthand (e.g. `.justify-start`)
+.justify, .justify-content {
   &-start {
     @include justify-content(flex-start);
   }
@@ -71,7 +83,7 @@
   }
 }
 
-/* cross axis: */
+/* cross axis properties: */
 .align-items {
   &-start {
     @include align-items(flex-start);
@@ -85,19 +97,26 @@
   &-stretch {
     @include align-items(stretch);
   }
-  // TODO: do we really need to specify the `baseline` value?
+  // TODO: do we really need to specify the `baseline` value? I.e. `align-items-baseline` ?
 }
 
-// TODO: add flex `align-self` property?
+/**************
+ Flex Item properties:
+ **************/
 
-/* creates flexbox container horizontal direction */
-.flex-row {
-  @include display-flex;
-  @include flex-direction(row);
-}
-
-/* creates flexbox container vertical direction */
-.flex-column {
-  @include display-flex;
-  @include flex-direction(column);
+/* cross axis properties: */
+.align-self {
+  &-start{
+    @include align-self(flex-start);
+  }
+  &-end {
+    @include align-self(flex-end);
+  }
+  &-center {
+    @include align-self(center);
+  }
+  &-stretch {
+    @include align-self(stretch);
+  }
+  // TODO: similarly, do we need to specify `baseline` for align-self property?
 }
