--- a/src/sass/_utility.scss
+++ b/src/sass/_utility.scss
@@ -24,6 +24,11 @@
   text-align: center;
 }
 
+.text-justify {
+  text-align:   justify;
+  text-justify: inter-word;
+}
+
 .text-end {
   text-align: end;
 }
