--- a/src/sass/_flexgrid.scss
+++ b/src/sass/_flexgrid.scss
@@ -120,3 +120,10 @@
   }
   // TODO: similarly, do we need to specify `baseline` for align-self property?
 }
+
+/**************
+ Flex utilities:
+ **************/
+.flex-grow {
+  @include flex-grow(1);
+}
