--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -15,22 +15,15 @@ $alt-blue:      #196bac;    // or try #259fff
 $link-blue:     deepskyblue;
 $link-hover:    #0FA0CE;
 $selection:     #4fc8de;
-$blue-white:    #cfdce4;
 $portfolio-bg:  rgba(250, 250, 250, 1);
 $footer-bg:     rgb(245, 245, 245);
 $portfolio-hr:  #dddddd;
 $darkgray:      darkgray;
 $alt-gray:      #9f9f9f;
-$blue-gray:     #687283;
 $shadow-gray:   rgba(210, 210, 210, .5);
 $gray:          rgba(100, 100, 100, 1);
-$gray-invis:    rgba(100, 100, 100, 0);
-$text-black:    rgba(34, 34, 34, 1);    // same as #222
-$txt-blk-invis: rgba(34, 34, 34, 0);
-$sepia:         #e4dcd2;  // unused
-$light-sepia:   #fcfaf7;  // unused
-$brown:         #998e82;  // unused
-$brown-text:    #665f57;  // unused
+$invis-gray:    rgba(100, 100, 100, 0);
+$black:         rgba(34, 34, 34, 1);    // same as #222
 
 $section-padding:   0.9%;
 $header-height:     5rem;
@@ -49,19 +42,18 @@ a:hover {
 
 /* Buttons: */
 button, .button, input[type='button'], input[type='submit'], input[type='reset'] {
-  font-size:        1.1rem;
-  background-color: transparent;
   display:          inline-block;
+  font-size:        1.1rem;
+  letter-spacing:   0.1rem;
+  background-color: transparent;
   padding:          0.4rem 0.7rem;
   cursor:           pointer;
   border-radius:    20px;
-  border:           1px solid $txt-blk-invis;
-  letter-spacing:   0.1rem;
+  border:           1px solid $invis-gray;
   @include          transition($common-transition);
 
   &:hover, &:focus {
-    border:         1px solid $text-black;
-    color:          black;
+    border:         1px solid $gray;
   }
 }
 
@@ -82,7 +74,7 @@ button, .button, input[type='button'], input[type='submit'], input[type='reset']
    ========================================================================== */
 /* all sections (except footer, header): */
 section {
-  min-height: 25vh;
+  min-height:     25vh;
   padding-bottom: $section-padding;
 }
 
@@ -96,16 +88,9 @@ section {
  Header
  *******************/
 header {
-  // position:       fixed;
-  width:          100%;
-  height:         $header-height;
-  background:     white;
-
-  .logo {
-    font-family:  'Oldenburg', serif;
-    color:        $drk-blue;
-    font-size:    2rem;
-  }
+  width:      100%;
+  height:     $header-height;
+  background: white;
 
   a {
     text-transform: uppercase;
@@ -119,35 +104,22 @@ header {
     margin: 0;
     color:  $gray;
   }
-
-  img {
-    max-height: 4rem;
-    width:      auto;
-    @include    transition($common-transition);
-  }
 }
 
 /*******************
  Home
  *******************/
 #home {
-  @include display-flex;
-  @include flex-direction(column);
-
-  * {
-    border: 1px dodgerblue dotted;
-  }
+  @include        display-flex;
+  @include        flex-direction(column);
   order:          1;
   padding-bottom: 0;
   overflow:       hidden;
   height:         calc(100vh - #{$header-height} - 1px);    // compensate for `header` and `hr`
 }
 
-.test {
-  @include display-flex;
-  @include flex-direction(column);
-  @include flex(1);
-  @include justify-content(flex-end);
+.home-title {
+  margin-top: 10vh;
 }
 
 /*******************
@@ -156,8 +128,8 @@ header {
 .about-hr {
   width:      100%;
   height:     1px;
-  background: $sepia;    // needed when hr has height > 1px
-  color:      $sepia;
+  background: $portfolio-hr;    // needed when hr has height > 1px
+  color:      $portfolio-hr;
   border:     none;
 }
 
