--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -643,18 +643,79 @@ footer a > i {
 /*******************
  Media queries
  *******************/
-/* Phones */
-/* Small Screens: */
-/* Tablets */
-/* Laptops/Desktops: */
-/* Large Screens: */
-/* Holy Grail Layout */
+/* ==========================================================================
+   Media query (Holy Grail Layout):
+   ========================================================================== */
 @media screen and (max-width: 640px) {
-  .place-holder {
+  /**************
+    All sections:
+  **************/
+  [class^='col-'] {
+    text-align: center;
+    max-width: 100%;
+    width: 100%;
+  }
+
+  /* change flex direction for relevant sections: */
+  .about-li,
+  .portfolio-row,
+  .container-row {
     -webkit-flex-direction: column;
     flex-direction: column;
-    -webkit-box-orient: vertical;
-    box-orient: vertical;
-    order: 0;
+  }
+
+  /**************
+    Header section:
+  **************/
+  nav > div {
+    -webkit-flex: 1 1 auto !important;
+    flex: 1 1 auto !important;
+  }
+
+  /**************
+    Home section:
+  **************/
+  .home-title {
+    margin-top: 4vh;
+  }
+
+  /**************
+    About section:
+  **************/
+  #about-list figure {
+    padding: 0;
+  }
+
+  .about-li [class^='col-'],
+  .about-li .skill-icons {
+    -webkit-justify-content: center;
+    justify-content: center;
+  }
+  .about-li > div {
+    max-width: 100%;
+    width: 100%;
+  }
+  .about-li p {
+    padding: 0 2rem;
+    text-align: justify;
+    text-justify: inter-word;
+  }
+
+  /**************
+    Portfolio section:
+  **************/
+  .portfolio-row {
+    /* Add gutters and auto center figure elements: */
+  }
+  .portfolio-row a {
+    max-width: 70%;
+    margin: 1rem auto 1rem auto;
+  }
+  .portfolio-row a img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  .portfolio-row a h4, .portfolio-row a p {
+    text-align: center;
   }
 }
